# casadi-neural-nets

./: .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt
.github/workflows/: ci.yml
examples/: ficnn.py  mlp.py  psd.py  pwq.py
src/csnn/: __init__.py  activation.py  containers.py  dropout.py  functional.py  init.py  linear.py  module.py  norm.py  recurrent.py
src/csnn/convex/: __init__.py  ficnn.py  psd.py  pwq.py
src/csnn/feedforward/: __init__.py  mlp.py
tests/: test_activation.py  test_containers.py  test_custom_nns.py  test_dropout.py  test_init.py  test_linear.py  test_module.py  test_norm.py  test_recurrent.py
